--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,18 @@ body {
   color: var(--primery-text-color);
   font-family: "Roboto", sans-serif;
 }
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  outline: 2px solid tomato;
+}
+.hero,
+.footer {
+  background-color: var(--bgc-hero);
+}
 .list {
   list-style: none;
 }
@@ -82,10 +94,7 @@ body {
   color: var(--accent-color);
 }
 /* hero*/
-.hero,
-.footer {
-  background-color: var(--bgc-hero);
-}
+
 .hero-title {
   font-weight: 900;
   font-size: 44px;
