--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,9 @@ body {
 }
 .list {
   list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
 }
 .visually-hidden {
   position: absolute;
@@ -39,6 +42,25 @@ body {
   clip-path: inset(50%);
   margin: -1px;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+h2 {
+  margin-bottom: 4px;
+}
+h3 {
+  margin-bottom: 10px;
+}
+img {
+  display: block;
+}
+
 /* основной цвет текста color: #212121; */
 /* вторичный цвет текста color: #757575; */
 /* цвет активации  color: #2196F3; */
@@ -49,6 +71,14 @@ body {
 /* heder */
 .header {
   background-color: #ffffff;
+  border: 1px solid #ececec;
+}
+.header-list {
+  margin-left: auto;
+}
+.main-header {
+  display: flex;
+  align-items: center;
 }
 .logo {
   font-family: "Raleway";
@@ -65,7 +95,19 @@ body {
 .logo-footer {
   color: rgba(255, 255, 255, 1);
 }
-.nav-link {
+.nav {
+  margin-left: 92px;
+}
+.nav-link,
+.nav-link-current {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
   color: var(--primery-text-color);
 }
 .nav-link:hover,
@@ -86,6 +128,7 @@ body {
 .header-list a {
   text-decoration: none;
 }
+
 .list-link {
   color: var(--secondary-text-color);
 }
@@ -93,9 +136,21 @@ body {
 .list-link:focus {
   color: var(--accent-color);
 }
+.nav-list .item:not(:last-child) {
+  margin-right: 50px;
+}
+.header-list .item + .item {
+  margin-left: 50px;
+}
+
 /* hero*/
+.hero {
+  padding: 200px 0;
+  text-align: center;
+}
 
 .hero-title {
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -104,17 +159,24 @@ body {
   color: #ffffff;
 }
 .hero-btn {
+  display: inline-block;
+  padding: 10px 32px;
+  align-items: center;
+  text-align: center;
   font-family: "Roboto";
   background-color: var(--accent-color);
   color: #ffffff;
   cursor: pointer;
+  min-width: 200px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  border-radius: 4px;
 }
+
 .hero-btn:hover,
 .hero-btn:focus,
 .hero-btn:active {
@@ -123,64 +185,146 @@ body {
   border-radius: 4px;
 }
 
-.btn {
-  font-family: "Roboto";
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
-  letter-spacing: 0.03em;
-  background-color: var(--secondary-bgc);
-  color: var(--primery-text-color);
-  cursor: pointer;
-}
 .btn:hover,
 .btn:focus {
   background-color: var(--accent-color);
   color: #ffffff;
 }
 /* benefits */
+.benefits {
+  padding: 94px 0;
+}
+.benefits-list .item {
+  width: calc((100%-90px) / 4);
+  margin-right: 30px;
+}
+.benefits-list .item:last-child {
+  margin-right: 0;
+}
 
 .benefits-title {
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primery-text-color);
 }
 .benefits-text {
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
-/* team */
-.team {
-  background-color: var(--secondary-bgc);
+/* activity */
+.activity {
+  padding: 0 0 94px;
 }
-.team-item {
-  background-color: var(--bgc);
-}
-.team-title,
 .activity-title {
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+  text-align: center;
+}
+
+.activity-list .item:not(:last-child) {
+  margin-right: 30px;
+}
+
+/* team */
+.description {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.team {
+  padding: 94px 0;
+  background-color: var(--secondary-bgc);
+}
+.team-item:not(:last-child) {
+  margin-right: 30px;
+}
+.team-item {
+  width: calc((100%-90px) / 4);
+  /* background-color: var(--bgc); */
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.team-title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  text-align: center;
 }
 .team-person {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
+  text-align: center;
   letter-spacing: 0.03em;
 }
 .team-text {
   font-size: 16px;
   line-height: 1.18;
+  text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
 /* portfolio */
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.portfolio-list .item {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.portfolio-list .item:nth-child(3n) {
+  margin-right: 0;
+}
+.portfolio-list .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+.desc {
+  padding: 20px 24px;
+  border: 1px solid #eeeeee;
+}
+
+.portfolio {
+  padding: 94px 0;
+}
+.portfolio-btn .item + .item {
+  margin-left: 8px;
+}
+
+.btn {
+  padding: 6px 22px;
+  display: block;
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  border: 0;
+  border-radius: 4px;
+  letter-spacing: 0.03em;
+  background-color: var(--secondary-bgc);
+  color: var(--primery-text-color);
+  cursor: pointer;
+}
+.portfolio-btn {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
 .portfolio-list a {
   text-decoration: none;
 }
@@ -198,8 +342,21 @@ body {
 }
 
 /* footer */
+.container .footer-list {
+  display: inline-block;
+}
+.main-footer .logo {
+  display: inline-block;
+  margin-bottom: 20px;
+}
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
 
 .footer-adress {
+  display: inline-block;
+  margin-bottom: 9px;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -208,8 +365,9 @@ body {
   color: #ffffff;
   text-decoration: none;
 }
-
 .footer-contact {
+  margin-bottom: 9px;
+  display: inline-block;
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
   font-weight: 400;
