--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  outline: 2px solid tomato;
+  /* outline: 2px solid tomato; */
 }
 .hero,
 .footer {
@@ -173,7 +173,6 @@ img {
   line-height: 1.87;
   letter-spacing: 0.06em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
   border-radius: 4px;
 }
 
