--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,6 @@ body {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  /* outline: 2px solid tomato; */
 }
 .hero,
 .footer {
@@ -80,6 +79,9 @@ img {
   display: flex;
   align-items: center;
 }
+.up {
+  padding: 24px 0 25px;
+}
 .logo {
   font-family: "Raleway";
   font-weight: 700;
@@ -130,6 +132,7 @@ img {
 }
 
 .list-link {
+  padding: 32px 0;
   color: var(--secondary-text-color);
 }
 .list-link:hover,
@@ -150,7 +153,8 @@ img {
 }
 
 .hero-title {
-  margin-bottom: 30px;
+  max-width: 696px;
+  margin: 0 auto 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -328,6 +332,7 @@ img {
   text-decoration: none;
 }
 .portfolio-title {
+  color: var(--primery-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -352,10 +357,12 @@ img {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+.footer-list .item:not(:last-child) {
+  margin-bottom: 9px;
+}
 
 .footer-adress {
   display: inline-block;
-  margin-bottom: 9px;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -365,7 +372,6 @@ img {
   text-decoration: none;
 }
 .footer-contact {
-  margin-bottom: 9px;
   display: inline-block;
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
