--- a/css/styles.css
+++ b/css/styles.css
@@ -283,17 +283,10 @@ img {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
+  gap: 30px;
 }
 .portfolio-list .item {
   width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-.portfolio-list .item:nth-child(3n) {
-  margin-right: 0;
-}
-.portfolio-list .item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
 }
 .desc {
   padding: 20px 24px;
